<resources>
    <string name="app_name">Sport News</string>
    <string name="email_registrate">Email</string>
    <string name="password_registrate">Password</string>
    <string name="username_registrate">Username</string>
    <string name="button_enter_registrate">Регистрация</string>
    <string name="user_have_account">Нажмите. Если у вас есть аккаунт</string>
    <string name="user_forgot_pass">Click there. If you forgot password</string>
    <string name="enter_msg_str">Enter Message</string>
    <string name="enter_button">Enter</string>
    <string name="exit_from_account_button">Exit</string>
    <string name="title_activity_chat_navigation">ChatNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="find_message">Find Message</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search_user">user_search</string>
    <string name="bt_ver_email">Я подтвердил email</string>
    <string name="click_to_change_email">Click to Change Email</string>
    <string name="setting_username">Status</string>
    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="user_email">User email</string>
    <string name="password">Password</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="theme_mode_text">Light Mode</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="_1958">Футбольный клуб Рубин - это одна из самых успешных и уважаемых команд России. Свою историю клуб начал писать еще в далеком 1958 году, и с тех пор стал настоящей гордостью Казани и всего региона. Клуб имеет богатую историю и получил множество достижений за свою долгую историю. Рубин является двукратным чемпионом Российской футбольной премьер-лиги, победителем Кубка России и претендентом на различные европейские турниры. Красно-зеленые, как часто называют наших игроков, всегда демонстрируют прекрасный футбол и несгибаемый дух борьбы на каждом матче.</string>
    <string name="news1">«Мы не вели переговоров по Рожкову. Конечно, игрок молодежной сборной находился в наших списках, но переговоров не было», – сказал председатель совета директоров Дмитрий Гафин\n</string>
    <string name="head_of_news1">В «Динамо» отрицают, что вели переговоры по Рожкову</string>
    <string name="head_of_news2">Кабутов – лидер «Рубина» в этом сезоне по количеству созданных голевых моментов</string>
    <string name="head_of_news3">Вада не играет из-за травмы приводящей мышцы бедра</string>
    <string name="news3">Об этом Sport24 рассказал его агент. В последний раз Валентин выходил на поле 2 ноября в матче с «Локо». На восстановление нужно ещё несколько недель</string>
    <string name="head_of_news4">Тесленко в последней сборной тура от Матч Премьер в году</string>
    <string name="question1">Какой производитель формы никогда не был спонсором «Рубина»?</string>
    <string name="question2">В каком году Курбан Бердыев впервые стал тренером «Рубина»?</string>
    <string name="question3">Кто забил победный гол в ворота «Барселоны» в легендарном матче на «Камп Ноу»?</string>
    <string name="shirt2">ФУТБОЛКА ИГРОВАЯ RUBIN KAZAN 24-25 БЕЛАЯ</string>
    <string name="shirt1">ФУТБОЛКА ИГРОВАЯ RUBIN KAZAN 24-25 ЗЕЛЕНАЯ</string>
    <string name="shirt3">ФУТБОЛКА ИГРОВАЯ RUBIN KAZAN 24-25 РУБИНОВАЯ</string>
    <string name="shirt4">ФУТБОЛКА ТРЕН JAKO PERFORMANCE СЕРАЯ</string>
    <string name="saccs1">АРОМАТИЗАТОР ФК РУБИН ЛОГО 2019 (ЯБЛОКО-КОРИЦА)</string>
    <string name="saccs2">ПЕНАЛ ФК РУБИН КРАСНЫЙ ТУБУС</string>
    <string name="saccs3">ШКОЛЬНЫЙ НАБОР ФК РУБИН</string>
    <string name="saccs4">ТАПОЧКИ ФК РУБИН \"БОРДОВЫЕ\" ЛОГО 2019</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>