<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/mainBackground"
    android:visibility="visible"
    tools:context=".LoginActivity">

        <EditText
            android:id="@+id/enter_user_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:background="@drawable/rounded_selecters_login"
            android:hint="@string/email_registrate"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_name" />

        <EditText
            android:id="@+id/enter_user_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_selecters_login"
            android:hint="Пароль"
            android:inputType="numberPassword"
            android:paddingStart="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/enter_user_email"
            app:layout_constraintStart_toStartOf="@+id/enter_user_email"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_email" />

        <EditText
            android:id="@+id/enter_user_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:maxLength="25"
            android:autofillHints=""
            android:background="@drawable/rounded_selecters_login"
            android:hint="Логин"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_user"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button_registrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickSignUp"
            android:text="@string/button_enter_registrate"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/enter_user_password"
            app:layout_constraintStart_toStartOf="@+id/enter_user_password"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_password"
            tools:text="REGISTRATE" />


        <TextView
            android:id="@+id/alredy_user_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClickSignIn"
            android:text="@string/user_have_account"
            android:textColor="@color/black_in_white"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/button_registrate"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/button_registrate"
            app:layout_constraintTop_toBottomOf="@+id/button_registrate" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:onClick="onClickChooseImage"
            android:src="@drawable/ic_user_profile_image"
            android:visibility="invisible"
            app:civ_border_color="#B8DEEF"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_true_verification"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_load_verifition"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_name" />

        <Button
            android:id="@+id/bVerSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickVerComplete"
            android:text="@string/bt_ver_email"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/enter_user_password"
            app:layout_constraintStart_toStartOf="@+id/enter_user_password"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_password" />


        <Button
            android:id="@+id/sign_in_have_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickSignInHaveAccount"
            android:text="Войти"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/alredy_user_forgot_pass"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="@+id/alredy_user_forgot_pass"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_password" />

        <Button
            android:id="@+id/forgot_pass_ver_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickEnterPassword"
            android:text="Я подтвердил почту"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_email" />

        <Button
            android:id="@+id/back_sign_in"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickBack"
            android:text="Назад"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_have_account"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/sign_in_have_account"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_have_account" />

        <TextView
            android:id="@+id/alredy_user_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onClickForgotPass"
            android:text="Нажмите если вы забыли пароль"
            android:textColor="@color/black_in_white"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/alredy_user_have_account"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/alredy_user_have_account"
            app:layout_constraintTop_toBottomOf="@+id/alredy_user_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>