<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingsImageUser"
            android:layout_width="87dp"
            android:layout_height="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_user_profile_image"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/settingsUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsImageUser"
            app:layout_constraintTop_toTopOf="@+id/settingsImageUser"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:textSize="@dimen/normal_text"
            android:id="@+id/settingsEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            android:text="@string/user_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsImageUser"
            app:layout_constraintTop_toBottomOf="@+id/settingsUsername" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/setting_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Account"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/verticatil_large_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/setting_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_account_text"
        style="@style/settingsButtons"
        android:background="@drawable/ripple_effect">

        <EditText
            android:id="@+id/edSettingsEmail"
            android:maxLength="50"
            android:hint="Change Email"
            android:paddingLeft="6dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_email"
        style="@style/settingsButtons"
        android:background="@drawable/ripple_effect">
        <EditText
            android:id="@+id/edSettingsUsername"
            android:layout_width="match_parent"
            android:maxLength="30"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:hint="Change username"
            style="@style/normalText"
            android:paddingLeft="6dp"/>
<!--        <TextView-->
<!--            android:id="@+id/setting_label_username"-->
<!--            android:text="@string/setting_username"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/settings_username"-->
<!--            style="@style/smallText" />-->
<!--        <View-->
<!--            app:layout_constraintTop_toBottomOf="@+id/setting_label_username"-->
<!--            style="@style/seporator"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_change_photo"
        style="@style/setting_btn_change_photo"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/setting_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_header"
        android:src="@drawable/ic_settings_camera"
        app:civ_circle_background_color="@color/mainBackground"
        app:civ_border_color="@color/white"
        android:onClick="onClickChooseImageSettings"
        />



    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/switch_theme"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:backgroundTint="@color/ic_sign_out_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textOff="@string/theme_mode_text"
        android:textOn="@string/theme_mode_text"
        app:layout_constraintStart_toStartOf="@+id/settings_btn_change_username"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_username" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Принять изменения"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_theme" />


</androidx.constraintlayout.widget.ConstraintLayout>